# ChangeLog for lxqt-base/liblxqt
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/lxqt-base/liblxqt/ChangeLog,v 1.8 2015/01/30 16:32:20 kensington Exp $

  30 Jan 2015; Michael Palimaka <kensington@gentoo.org> liblxqt-0.7.0.ebuild,
  liblxqt-0.8.0.ebuild:
  Update SRC_URI by Michael Vetter <g.bluehut@gmail.com> wrt bug #537032.

*liblxqt-0.8.0 (08 Nov 2014)

  08 Nov 2014; Jauhien Piatlicki <jauhien@gentoo.org> +liblxqt-0.8.0.ebuild:
  version bump

  08 Nov 2014; Ben de Groot <yngwin@gentoo.org> liblxqt-0.7.0.ebuild:
  Move libqtxdg to new category

  02 Nov 2014; Jauhien Piatlicki <jauhien@gentoo.org> liblxqt-0.7.0.ebuild:
  make dependencies more precise (preparation for LXQt 0.8.0 release)

  29 May 2014; Manuel Rüger <mrueg@gentoo.org> liblxqt-0.7.0.ebuild:
  Add ~arm keyword.

  25 May 2014; Jauhien Piatlicki <jauhien@gentoo.org> liblxqt-0.7.0.ebuild:
  Fix DESCRIPTION

  25 May 2014; Jauhien Piatlicki <jauhien@gentoo.org> -liblxqt-9999.ebuild:
  remove live ebuild added by error

*liblxqt-0.7.0 (25 May 2014)
*liblxqt-9999 (25 May 2014)

  25 May 2014; Jauhien Piatlicki <jauhien@gentoo.org> +liblxqt-0.7.0.ebuild,
  +liblxqt-9999.ebuild, +metadata.xml:
  Initial import from the qt overlay, thanks to Harvey Mittens and Davide
  Pesavento, see bug #509946