@@ -1,6 +1,11 @@
 # ChangeLog for lxqt-base/liblxqt
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/lxqt-base/liblxqt/ChangeLog,v 1.8 2015/01/30 16:32:20 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/lxqt-base/liblxqt/ChangeLog,v 1.9 2015/02/10 17:07:38 yngwin Exp $
+
+*liblxqt-0.9.0 (10 Feb 2015)
+
+  10 Feb 2015; Ben de Groot <yngwin@gentoo.org> +liblxqt-0.9.0.ebuild:
+  LXQt 0.9.0 version bump
 
   30 Jan 2015; Michael Palimaka <kensington@gentoo.org> liblxqt-0.7.0.ebuild,
   liblxqt-0.8.0.ebuild:
